Correct missing translations

--- a/app/views/dishes/_show.html.erb
+++ b/app/views/dishes/_show.html.erb
@@ -31,8 +31,8 @@
     <table class="table table-condensed">
       <thead>
         <tr>
-          <th><%= t('serverspecs.name') %></th>
-          <th><%= t('serverspecs.description') %></th>
+          <th><%= t('servertests.name') %></th>
+          <th><%= t('servertests.description') %></th>
         </tr>
       </thead>
       <tbody>
