--- a/app/views/servertests/edit.html.erb
+++ b/app/views/servertests/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, I18n.t('serverspecs.serverspec')+" | "+I18n.t('helpers.titles.edit')) %>
+<% provide(:title, I18n.t('servertests.servertest')+" | "+I18n.t('helpers.titles.edit')) %>
 <%- model_class = Servertest -%>
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
