--- a/app/views/infrastructures/_keypair_form.html.erb
+++ b/app/views/infrastructures/_keypair_form.html.erb
@@ -16,17 +16,38 @@
   </div>
   <%= f.hidden_field :region %>
 
-  <div class="form-group">
+  <div id="KeypairFormGroup" class="form-group">
     <label class="col-sm-2 control-label"><%= t 'app_settings.aws_keypair' %></label>
     <div class="col-sm-5">
-      <p class="help-block"><%= t('ec2_private_keys.msg.enter_or_generate') %></p>
-      <p><button class="btn btn-default btn-sm create_ec2_key"><%= t 'ec2_private_keys.btn.new' %></button></p>
-      <label for="keypair_name" class="control-label"><%= t 'app_settings.keypair_name' %></label>
-      <input id="keypair_name" class="form-control ec2-private-key-name allow-empty" type="text" name="infrastructure[keypair_name]" required maxlength="255">
 
-      <label for="keypair_value" class="control-label"><%= t 'app_settings.private_key' %></label>
-      <textarea id="keypair_value" class="form-control ec2-private-key-value allow-empty" name="infrastructure[keypair_value]" placeholder="<%= t 'common.msg.key_droppable' %>" rows="7" required></textarea>
-      <p class="help-block"><%= t('infrastructures.msg.help_keypair') %></p>
+      <label>
+        <input type="radio" name="infrastructure[keypair_input_type]" value="input" v-model="input_type" checked>
+        <%= t('infrastructures.radio.input_keypair')%>
+      </label>
+      <label>
+        <input type="radio" name="infrastructure[keypair_input_type]" value="select" v-model="input_type">
+        <%= t('infrastructures.radio.select_keypair')%>
+      </label>
+
+      <div v-if="input_type === 'input'">
+        <p class="help-block"><%= t('ec2_private_keys.msg.enter_or_generate') %></p>
+        <p><button class="btn btn-default btn-sm create_ec2_key"><%= t 'ec2_private_keys.btn.new' %></button></p>
+        <label for="keypair_name" class="control-label"><%= t 'app_settings.keypair_name' %></label>
+        <input id="keypair_name" class="form-control ec2-private-key-name allow-empty" type="text" name="infrastructure[keypair_name]" required maxlength="255">
+
+        <label for="keypair_value" class="control-label"><%= t 'app_settings.private_key' %></label>
+        <textarea id="keypair_value" class="form-control ec2-private-key-value allow-empty" name="infrastructure[keypair_value]" placeholder="<%= t 'common.msg.key_droppable' %>" rows="7" required></textarea>
+        <p class="help-block"><%= t('infrastructures.msg.help_keypair') %></p>
+      </div>
+      <div v-if="input_type === 'select'" v-cloak>
+        <label for="ec2_private_key_id" class="control-label"><%= t('infrastructures.copy_keypair') %></label>
+        <select class="form-control" name="infrastructure[copy_ec2_private_key_id]">
+          <% @ec2_private_key_list.each {|ec2_private_key_name, ec2_private_key_id| %>
+            <option value="<%= ec2_private_key_id %>"><%= ec2_private_key_name %></option>
+          <% } %>
+        </select>
+      </div>
+
     </div>
   </div>
 
