--- a/app/views/vue/_add_modify_tabpane.html.erb
+++ b/app/views/vue/_add_modify_tabpane.html.erb
@@ -13,7 +13,7 @@
     <div class="form-group">
         <label for="add_modify_value"><%= t('cf_templates.cf_template') %></label>
     </div>
-    <div class="alert alert-danger" v-show="jsonParseErr">{{jsonParseErr}}</div>
+    <div class="alert alert-danger" v-show="yamlParseErr">{{yamlParseErr}}</div>
     <div style="position: absolute; width: 100%; left: 0px; height: 429px; font-size: 12px;" autofocus v-ace="result.value" name="description" id="add_modify_value"></div>
   </fieldset>
 </div>
@@ -43,7 +43,7 @@
 </div>
 
 <div class="form-actions-top col-md-12 col-sm-12">
-  <button class="btn btn-primary btn-sm" :class="{disabled: jsonParseErr}" @click="submit()">
+  <button class="btn btn-primary btn-sm" :class="{disabled: yamlParseErr}" @click="submit()">
     <%= t 'cf_templates.insert_parameters' %>
   </button>
 </div>
