--- a/app/views/vue/_stack_events_table.html
+++ b/app/views/vue/_stack_events_table.html
@@ -3,15 +3,30 @@
     <table class="table table-condensed">
       <thead>
         <tr>
-          <th>time</th>
-          <th>type</th>
-          <th>logical</th>
-          <th>status</th>
-          <th>reason</th>
+          <th :class="{active: sortKey == 'time'}" @click="sortBy('time')">
+            <span>time</span>
+            <span v-if="enable_sort" class="pull-right glyphicon" :class="sortOrders.time > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
+          </th>
+          <th :class="{active: sortKey == 'type'}" @click="sortBy('type')">
+            <span>type</span>
+            <span v-if="enable_sort"  class="pull-right glyphicon" :class="sortOrders.type > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
+          </th>
+          <th :class="{active: sortKey == 'logical'}" @click="sortBy('logical')">
+            <span>logical</span>
+            <span v-if="enable_sort"  class="pull-right glyphicon" :class="sortOrders.logical > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
+          </th>
+          <th :class="{active: sortKey == 'status'}" @click="sortBy('status')">
+            <span>status</span>
+            <span v-if="enable_sort"  class="pull-right glyphicon" :class="sortOrders.status > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
+          </th>
+          <th :class="{active: sortKey == 'reason'}" @click="sortBy('reason')">
+            <span>reason</span>
+            <span v-if="enable_sort"  class="pull-right glyphicon" :class="sortOrders.reason > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
+          </th>
         </tr>
       </thead>
       <tbody>
-        <tr v-for="v in events" :class="event_tr_class(v.status)">
+        <tr v-for="v in events | powerfulOrderBy sortKey sortOrders[sortKey]" :class="event_tr_class(v.status)">
           <td v-text="toLocaleString(v.time)"></td>
           <td v-text="v.type"></td>
           <td v-text="v.logical"></td>
