Fix: データベースのimport/export機能がdb_crypt_secretを考慮していなかったのを修正

--- a/app/views/databases/_modal_export.html.erb
+++ b/app/views/databases/_modal_export.html.erb
@@ -17,6 +17,7 @@
               <li> <%= t('databases.msg.env', {env: Rails.env.capitalize}) %> </li>
               <li><%= t('databases.msg.secret')%></li>
               <li><%= t('databases.msg.db_key')%></li>
+              <li><%= t('databases.msg.db_salt')%></li>
             </ul>
           </div>
         </div>
