--- a/app/views/databases/_modal_import.html.erb
+++ b/app/views/databases/_modal_import.html.erb
@@ -28,6 +28,7 @@
               <li> <%= t('databases.msg.env', {env: Rails.env.capitalize}) %> </li>
               <li><%= t('databases.msg.secret')%></li>
               <li><%= t('databases.msg.db_key')%></li>
+              <li><%= t('databases.msg.db_salt')%></li>
             </ul>
           </div>
         </div>
