--- a/app/views/vue/_infra_logs_tabpane.html.erb
+++ b/app/views/vue/_infra_logs_tabpane.html.erb
@@ -1,6 +1,22 @@
-<table class="table table-condensed" style="border-collapse:collapse;">
+<div class="pull-right">
+  <div class="btn-group" role="group">
+    <a class="btn btn-success btn-sm"
+       :class="{disabled: !can_download}"
+       @click="download_selected">
+      <span class='glyphicon glyphicon-export'></span>
+      <%= t 'common.btn.export' %>
+    </a>
+    <a class="btn btn-success btn-sm"
+       @click="download_all">
+      <%= t 'common.btn.all' %>
+    </a>&nbsp
+  </div>
+</div>
+
+<table class="table table-condensed table-hover" style="border-collapse:collapse;">
   <thead>
     <tr>
+      <th></th>
       <th :class="{active: sortKey == 'users.email'}" @click="sortBy('users.email')">
         <span>Operator</span>
         <span class="pull-right glyphicon" :class="sortOrders['users.email'] > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
@@ -20,7 +36,8 @@
     </tr>
   </thead>
   <tbody v-for="log in logs" class="tbody-infra-log">
-    <tr>
+    <tr :class="{info: is_select_entry(log)}" @click="select_entry(log)">
+      <td><input type="radio" v-model="picked_id" v-bind:value="log.id"/></td>
       <td><span v-if="log.admin" class="label label-info">admin</span>&nbsp;{{log.email}}</td>
       <td><span :class="status_class(log.status)" v-text="status_text(log.status)" class="label"></span></td>
       <td>{{log.title}}<a v-if="log.long" href="#" data-toggle="collapse" data-target="#logbody-{{log.id}}" class="accordion-toggle popovermore">...see all </a></td>
