Fix: スタックの詳細を表示する際に、指定したタブの内容が表示されない不具合の修正

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -88,10 +88,7 @@
   </div>
 
   <div style="display: none;">
-    <router-view
-      v-ref:infrastructure
-      :current_tab="infra_oepn_tab">
-    </router-view>
+    <router-view v-ref:infrastructure></router-view>
   </div>
 </script>
 
