Update: インフラストラクチャのページでブラウザの進む/戻るボタンに対応

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -88,7 +88,10 @@
   </div>
 
   <div style="display: none;">
-    <router-view v-ref:infrastructure></router-view>
+    <router-view
+      v-ref:infrastructure
+      :current_tab="infra_oepn_tab">
+    </router-view>
   </div>
 </script>
 
