--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -90,7 +90,7 @@
   <div style="display: none;">
     <router-view
       v-ref:infrastructure
-      :current_tab="infra_oepn_tab">
+      :initial_tab="infra_initial_tab">
     </router-view>
   </div>
 </script>
