Update: アプリセットアップ時にZabbixServerを建てないオプションを追加

--- a/app/views/app_settings/_panel_content_system.html.erb
+++ b/app/views/app_settings/_panel_content_system.html.erb
@@ -78,6 +78,13 @@
           <input type="text" class="form-control" id="subnet_id" name="subnet_id" placeholder="subnet-abcd1234 (optional)">
         </div>
       </div>
+
+      <div class="form-group">
+        <label for="skip_zabbix_server" class="col-sm-3 control-label"><%= t 'app_settings.skip_zabbix_server' %></label>
+        <div class="col-sm-7">
+          <input type="checkbox" class="form-control" id="skip_zabbix_server" name="skip_zabbix_server">
+        </div>
+      </div>
     </div>
 
   </fieldset>
