--- a/app/views/vue/_index.html.erb
+++ b/app/views/vue/_index.html.erb
@@ -2,10 +2,10 @@
   <table class="table table-hover ssp">
   <thead>
     <tr>
-      <th v-for=" key in columns"
+      <th v-for="(key,index) in columns"
           :class="{active: sortKey == key}"
           @click="sortBy(key)">
-        <span v-html="key | wrap index"></span>
+        <span v-html="coltxt_key(key,index)"></span>
           <span v-if="key !== 'id' && key !== 'role'" class="pull-right glyphicon" :class="sortOrders[key] > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
           <i v-if="key === 'role'"><a href="#" id="role" @click="pop()"
             data-content="<%= t('users.msg.role')%>"
@@ -20,30 +20,26 @@
     </thead>
     <tbody>
       <tr v-for="
-        entry in data
-        | filterBy filterKey
-        | count
-        | orderBy sortKey sortOrders[sortKey]
-        | paginate" :class="{info: !multiSelect && picked == entry || multiSelect && selections.includes(entry)}">
-        <td v-for="key in columns" @click="select_entry(entry)" @dblclick="show_entry(entry)">
-          <input v-if="multiSelect && $index == 0" type="checkbox" v-model="selections" :value="entry"/>
-          <input v-if="!multiSelect && $index == 0" type="radio" v-model="picked" v-bind:value="entry"/>
+        (entry,index) in table_data(filterKey,sortKey,sortOrders[sortKey])" :class="{info: !multiSelect && picked == entry || multiSelect && selections.includes(entry)}">
+        <td v-for="(key,index) in columns" @click="select_entry(entry)" @dblclick="show_entry(entry)">
+          <input v-if="multiSelect && index == 0" type="checkbox" v-model="selections" :value="entry"/>
+          <input v-else-if="!multiSelect && index == 0" type="radio" v-model="picked" v-bind:value="entry"/>
           <span v-show="key === 'stack_name'"> <a href="#" @click="show_entry(entry)" v-html="entry[key]"></a></span>
           <span v-show="key === 'dish_name'"> <a href="#" @click="show_entry(entry)" v-html="entry[key]"></a></span>
           <span v-show="key === 'serverspec_name'"> <a href="#" @click="show_entry(entry)" v-html="entry[key]"></a></span>
           <span v-show="key === 'cf_subject'"> <a href="#" @click="show_entry(entry)" v-html="entry[key]"></a></span>
-          <span id="{{key}}" v-html="entry[key] | listen key index lang"></span>
+          <span :id="key" v-html="table_text(entry[key],key,index,lang)"></span>
         </td>
       </tr>
-      <tr  v-if="filteredLength === 0 && data.length > 0">
+      <tr  v-if="filteredLength === 0 && tbl_data.length > 0">
         <td><h4> <%= raw t 'common.msg.not_found', name: "{{filterKey}}" %></h4></td>
       </tr>
     </tbody>
   </table>
-  <nav v-if="data.length >= 10 && filteredLength >= 10">
+  <nav v-if="tbl_data.length >= 10 && filteredLength >= 10">
     <ul class="pager">
-      <li :class="{disabled: isStartPage}"><a @click="showPrev()" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></a></li>
-        <label><%= t 'monitoring.msg.page' %>: &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>&nbsp<span v-html="data.length / pages  | roundup"></span>
-      <li :class="{disabled: isEndPage}"><a @click="showNext()" :disabled="!isEndPage"></span><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</a></li>
+      <li :class="{disabled: isStartPage}"><a @click="showPrev()" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></span></a></li>
+        <label><%= t 'monitoring.msg.page' %>: &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>&nbsp<span v-html="tbl_data.length / pages  | roundup"></span>
+      <li :class="{disabled: isEndPage}"><a @click="showNext()" :disabled="!isEndPage"><span aria-hidden="true"><%= t 'monitoring.btn.next' %> &rarr;</span></a></li>
     </ul>
   </nav>
