--- a/app/views/vue/_index.html.erb
+++ b/app/views/vue/_index.html.erb
@@ -1,4 +1,5 @@
 <!-- component template -->
+<div>
   <table class="table table-hover ssp">
   <thead>
     <tr>
@@ -20,7 +21,7 @@
     </thead>
     <tbody>
       <tr v-for="
-        (entry,index) in table_data(filterKey,sortKey,sortOrders[sortKey])" :class="{info: !multiSelect && picked == entry || multiSelect && selections.includes(entry)}">
+        (entry,index) in table_data" :class="{info: !multiSelect && picked == entry || multiSelect && selections.includes(entry)}">
         <td v-for="(key,index) in columns" @click="select_entry(entry)" @dblclick="show_entry(entry)">
           <input v-if="multiSelect && index == 0" type="checkbox" v-model="selections" :value="entry"/>
           <input v-else-if="!multiSelect && index == 0" type="radio" v-model="picked" v-bind:value="entry"/>
@@ -31,15 +32,16 @@
           <span :id="key" v-html="table_text(entry[key],key,index,lang)"></span>
         </td>
       </tr>
-      <tr  v-if="filteredLength === 0 && tbl_data.length > 0">
+      <tr  v-if="filteredLength === 0">
         <td><h4> <%= raw t 'common.msg.not_found', name: "{{filterKey}}" %></h4></td>
       </tr>
     </tbody>
   </table>
-  <nav v-if="tbl_data.length >= 10 && filteredLength >= 10">
+  <nav v-if="filteredLength >= 10">
     <ul class="pager">
       <li :class="{disabled: isStartPage}"><a @click="showPrev()" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></span></a></li>
-        <label><%= t 'monitoring.msg.page' %>: &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>&nbsp<span v-html="tbl_data.length / pages  | roundup"></span>
+        <label><%= t 'monitoring.msg.page' %>: &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>&nbsp<span v-html="max_pages"></span>
       <li :class="{disabled: isEndPage}"><a @click="showNext()" :disabled="!isEndPage"><span aria-hidden="true"><%= t 'monitoring.btn.next' %> &rarr;</span></a></li>
     </ul>
   </nav>
+</div>
