--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -9,7 +9,7 @@
 <script id="grid-template" type="text/template"> <%= render 'vue/index' %> </script>
 
 <!-- demo root element -->
-<div id="indexElement" v-el:node>
+<div id="indexElement" ref="node">
 
   <div v-cloak>
     <div class="col-md-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
