Fix: awspec_generator.html.erbの修正

--- a/app/views/servertests/awspec_generator.html.erb
+++ b/app/views/servertests/awspec_generator.html.erb
@@ -55,4 +55,5 @@
           servertests_path(infrastructure_id: @infra.try(:id)), class: 'btn-default btn' %>
       </div>
     </div>
-<div>
+  </div>
+</div>
