--- a/app/views/cf_templates/index.html.erb
+++ b/app/views/cf_templates/index.html.erb
@@ -13,8 +13,8 @@
     <div class="col-xs-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
 
     <div class="pull-right">
-      <a class="btn btn-danger btn-sm disabled"
-      :class="{disabled: !can_delete()}"
+      <a class="btn btn-danger btn-sm"
+      :disabled="!can_delete"
       @click="delete_entry()">
           <%= fa 'times' %>
           <%= t 'common.btn.delete' %>
@@ -22,8 +22,8 @@
     </div>
 
     <div class="pull-right" v-cloak="picked">
-      <a class="btn btn-default btn-sm disabled"
-          :href="picked.button_edit_cft" :class="{disabled: !can_edit()}">
+      <a class="btn btn-default btn-sm"
+          :href="picked.button_edit_cft" :disabled="!can_edit">
           <span class='glyphicon glyphicon-edit'></span>
           <%= t 'helpers.links.edit' %>
       </a>&nbsp
@@ -37,7 +37,7 @@
     <div class="pull-right">
       <div class="btn-group" role="group">
         <a class="btn btn-success btn-sm"
-        :class="{disabled: !can_export}"
+        :disabled="!can_export"
         @click="export_selected">
           <span class='glyphicon glyphicon-export'></span>
           <%= t 'common.btn.export' %>
