--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -160,6 +160,7 @@
                 <servertest-results-tabpane v-if="tabpane_active('serverspec_results')" :infra_id.once="current_infra.id" :columns.once="spec_Columns" :physical_id="tabpaneGroupID"   ></servertest-results-tabpane>
                 <operation-sched-tabpane    v-if="tabpane_active('operation-sched')"    :infra_id.once="current_infra.id" :columns.once="ops_sched_Columns" :resources="resources"></operation-sched-tabpane>
                 <view-rules-tabpane         v-if="tabpane_active('view-rules')"         :infra_id.once="current_infra.id" :security_groups.once="sec_group" :physical_id.once="tabpaneGroupID" :instance_type.once="instance_type"></view-rules-tabpane>
+                <edit-ansible-playbook-tabpane       v-if="tabpane_active('edit_ansible_playbook')"       :infra_id.once="current_infra.id" ></edit-ansible-playbook-tabpane>
               </div>
             </div>
           </div>
@@ -193,3 +194,5 @@
 
 <script id="operation-sched-tabpane-template" type="text/template"> <%=	render 'vue/operation_sched_tabpane' %> </script>
 <script id="view-rules-tabpane-template" type="text/template"> <%=	render 'vue/view_rules_tabpane' %> </script>
+
+<script id="edit-ansible-playbook-tabpane-template"    type="text/template"> <%= render 'vue/edit_ansible_playbook_tabpane' %> </script>
