--- a/app/views/vue/_edit_ansible_playbook_tabpane.html.erb
+++ b/app/views/vue/_edit_ansible_playbook_tabpane.html.erb
@@ -36,11 +36,11 @@
   </div>
 </div>
 
-<%# extra_vers %>
+<%# extra_vars %>
 <div class="col-md-12 col-sm-12">
-  <h5 class="page-header"><%= t 'nodes.extra_vers' %></h5>
+  <h5 class="page-header"><%= t 'nodes.extra_vars' %></h5>
   <div class="form-group">
-    <input type="text" v-model="extra_vers" class="form-control" />
+    <input type="text" v-model="extra_vars" class="form-control" />
   </div>
 </div>
 
