Delete: dishからChef機能を削除

--- a/app/views/dishes/_edit.html.erb
+++ b/app/views/dishes/_edit.html.erb
@@ -1,9 +1,6 @@
 <div class="col-md-12 col-sm-12">
-  <%= render partial: 'shared/edit_runlist', locals: {
-    roles:        @roles,
-    cookbooks:    @cookbooks,
-    runlist:      @runlist,
-  } %>
+  <h3 class="page-header">playbook</h3>
+  <p>Sorry, not implemented yet.</p>
 </div>
 
 <div class="col-md-12 col-sm-12">
