Fix: [WIP] Helperに怒られる部分の修正

--- a/app/views/cf_templates/index.html.erb
+++ b/app/views/cf_templates/index.html.erb
@@ -64,13 +64,13 @@
 
 
   <demo-grid
-  :data.sync="gridData"
+  :data="gridData"
   :columns="gridColumns"
   :filter-key="searchQuery"
-  :picked.sync="picked"
+  :picked="picked"
   :index="index"
   :multi-select="multiSelect"
-  :selections.sync="selections"
+  :selections="selections"
   :url="url">
   </demo-grid>
   <div v-if="is_empty" v-cloak>
