--- a/app/views/servertests/index.html.erb
+++ b/app/views/servertests/index.html.erb
@@ -45,10 +45,10 @@
 
 
   <demo-grid
-  :data.sync="gridData"
+  :data="gridData"
   :columns="gridColumns"
   :filter-key="searchQuery"
-  :picked.sync="picked"
+  :picked="picked"
   :index="index"
   :url="url">
   </demo-grid>
