--- a/app/views/zabbix_servers/new.html.erb
+++ b/app/views/zabbix_servers/new.html.erb
@@ -3,7 +3,7 @@
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
 </div>
-<div id="indexElement" v-el:node>
+<div id="indexElement" ref="node">
   <div v-if="new_loader" v-cloak>
     <span class="loader"></span>
     Registering Zabbix Server ...
