--- a/app/views/app_settings/show.html.erb
+++ b/app/views/app_settings/show.html.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="panel-body">
     <%= render partial: 'panel_content_system' %>
-    <%= render partial: 'panel_content_chef' %>
+    <%= render partial: 'panel_content_system_server' %>
   </div>
 
   <div class="panel-footer">
