--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -39,10 +39,10 @@
   </div>
 
   <demo-grid
-  :data.sync="gridData"
+  :data="gridData"
   :columns="gridColumns"
   :filter-key="searchQuery"
-  :picked.sync="picked"
+  :picked="picked"
   :index="index"
   :url="url">
   </demo-grid>
