Fix: ユーザー削除ボタンの挙動変更

--- a/app/views/users_admin/index.html.erb
+++ b/app/views/users_admin/index.html.erb
@@ -13,7 +13,7 @@
 
 
       <div class="pull-right" v-cloak="picked">
-        <a class="btn btn-danger btn-sm disabled"
+        <a class="btn btn-danger btn-sm"
         @click="delete_entry()"
           :class="{disabled: can_delete()}">
             <%= fa 'times' %>
