--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -13,14 +13,15 @@
 </div>
 
 <script id="index-template" type="text/template">
-  <div id="indexElement" v-el:node>
+  <div>
+  <div id="indexElement" ref="node">
 
     <div v-cloak>
       <div class="col-xs-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
 
       <div class="pull-right">
         <div class='btn-group'>
-            <a class='btn btn-sm btn-danger disabled' data-toggle='dropdown' href='#' :class="{disabled: !can_delete()}">
+            <a class='btn btn-sm btn-danger' data-toggle='dropdown' href='#' :class="{disabled: !can_delete()}">
               <%= fa 'trash' %> <%= t('infrastructures.btn.delete_stack') %>&nbsp;<span class='caret'></span>
             </a>
            <ul class='dropdown-menu'>
@@ -33,13 +34,13 @@
 
       <div class="pull-right">
         <div class="btn-group">
-          <a class='btn btn-sm btn-warning disabled' href='#' @click="detach_infra()" :class="{disabled: !can_detach()}"><%= fa 'chain-broken' %> <%= t('helpers.links.detach') %></a>&nbsp
+          <a class='btn btn-sm btn-warning' href='#' @click="detach_infra()" :class="{disabled: !can_detach()}"><%= fa 'chain-broken' %> <%= t('helpers.links.detach') %></a>&nbsp
         </div>
       </div>
 
       <div class="pull-right">
         <div class="btn-group">
-             <a class="btn btn-default btn-sm dropdown-toggle disabled" data-toggle="dropdown" href="#" :class="{disabled: !is_picked()}">
+             <a class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" href="#" :class="{disabled: !is_picked()}">
                <%= t 'common.btn.settings' %> <span class="caret"></span>
              </a>&nbsp
              <ul class="dropdown-menu">
@@ -53,7 +54,7 @@
       </div>
 
       <div class="pull-right" v-cloak="picked">
-        <a class="btn btn-default btn-sm disabled"
+        <a class="btn btn-default btn-sm"
             :href="picked.edit_infrastructure_path" :class="{disabled: !can_edit()}">
             <span class='glyphicon glyphicon-edit'></span>
             <%= t 'helpers.links.edit' %>
@@ -68,11 +69,10 @@
     </div>
 
     <demo-grid
-    v-ref:demogrid
-    :data.sync="gridData"
+    :data="gridData"
     :columns="gridColumns"
     :filter-key="searchQuery"
-    :picked.sync="picked"
+    :picked="picked"
     :index="index"
     :url="url">
     </demo-grid>
@@ -97,7 +97,7 @@
     v-ref:infrastructure
     :initial_tab="infra_initial_tab">
   </router-view>
-
+  </div>
 </script>
 
 <%= render 'show' %>
