Fix: インフラストラクチャの画面をちょっと動かした

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -94,7 +94,7 @@
   <div class="page-header"></div>
 
   <router-view
-    v-ref:infrastructure
+    ref="infrastructure"
     :initial_tab="infra_initial_tab">
   </router-view>
   </div>
